--- a/test/pact/pact-js-project/crd/smoke.yaml
+++ b/test/pact/pact-js-project/crd/smoke.yaml
@@ -15,6 +15,8 @@ spec:
   container:
     image: node:23.11.0
     workingDir: /data/repo/test/pact/pact-js-project
+  job:
+    activeDeadlineSeconds: 180
   steps:
   - name: Install dependencies
     shell: "npm install"
