--- a/test/curl/executor-tests/crd-workflow/smoke.yaml
+++ b/test/curl/executor-tests/crd-workflow/smoke.yaml
@@ -11,6 +11,8 @@ spec:
       requests:
         cpu: 32m
         memory: 32Mi
+  job:
+    activeDeadlineSeconds: 300
   steps:
     - name: Run tests
       shell: curl -f -LI https://testkube-test-page-lipsum.pages.dev/
@@ -33,6 +35,8 @@ spec:
       requests:
         cpu: 32m
         memory: 32Mi
+  job:
+    activeDeadlineSeconds: 300
   steps:
     - name: Run tests
       shell: curl -f -LI https://testkube-test-page-lipsum.pages.dev/ && sleep 10
@@ -52,6 +56,8 @@ spec:
       requests:
         cpu: 32m
         memory: 32Mi
+  job:
+    activeDeadlineSeconds: 300
   steps:
     - name: Run tests
       parallel:
