--- a/test/jmeter/executor-tests/crd-workflow/smoke.yaml
+++ b/test/jmeter/executor-tests/crd-workflow/smoke.yaml
@@ -18,6 +18,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run tests
     run:
@@ -49,6 +51,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run tests
     run:
@@ -80,6 +84,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run tests
     shell: jmeter -n -t jmeter-executor-smoke.jmx -j /data/artifacts/jmeter.log -o /data/artifacts/report -l /data/artifacts/jtl-report.jtl -e
@@ -112,6 +118,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run from template
     template:
@@ -141,6 +149,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run from template
     template:
@@ -170,6 +180,8 @@ spec:
         cpu: 512m
         memory: 512Mi
     workingDir: /data/repo/test/jmeter/executor-tests
+  job:
+    activeDeadlineSeconds: 300
   steps:
   - name: Run from template
     template:
@@ -220,6 +232,8 @@ spec:
         tcpSocket:
           port: 1099
         periodSeconds: 1
+  job:
+    activeDeadlineSeconds: 600
   steps:
   - name: Run tests
     run:
@@ -273,6 +287,8 @@ spec:
         tcpSocket:
           port: 1099
         periodSeconds: 1
+  job:
+    activeDeadlineSeconds: 600
   steps:
   - name: Run tests
     run:
