--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -10345,6 +10345,10 @@ components:
           $ref: "#/components/schemas/TestWorkflowConfigValue"
         target:
           $ref: "#/components/schemas/ExecutionTarget"
+        timezone:
+          $ref: "#/components/schemas/BoxedString"
+          description: cron timezone
+          example: UTC         
 
     TestWorkflowExecutionCR:
       type: object
