--- a/test/legacy/curl.yaml
+++ b/test/legacy/curl.yaml
@@ -12,7 +12,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/curl/executor-tests/curl-smoke-test.json
+      path: test/legacy/curl/curl-smoke-test.json
   executionRequest:
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 32Mi\n              cpu: 32m\n"
     activeDeadlineSeconds: 300
@@ -31,7 +31,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/curl/executor-tests/
+      path: test/legacy/curl/
   executionRequest:
     args:
       - "curl-smoke-test.json"
@@ -52,7 +52,7 @@ spec:
       type: git
       uri: https://github.com/kubeshop/testkube.git
       branch: main
-      path: test/curl/executor-tests/curl-smoke-test-negative.json
+      path: test/legacy/curl/curl-smoke-test-negative.json
   executionRequest:
     negativeTest: true
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 32Mi\n              cpu: 32m\n"
